# latex-ai

./: .env.example  LICENSE  README.md  compose.yaml  index.html  package-lock.json  package.json
.github/workflows/: ci-cd.yml
assets/: index-9KtdvtEb.js  index-B3h6b5gH.js  index-BH6gi0BN.js  index-BPAEaNAM.js  index-C9plxPGP.js  index-CfYEmFkT.js  index-CnQfs4OW.js  index-Cv5ZxqcR.js  index-D7NYiwFw.js  index-DNSemUL0.css  index-DT5qd9Sa.js  index-Dp9wJbIf.js  index-DuRnszZr.js  index-SedJYRck.css  index-d2oV5HNS.js
backend/: Dockerfile  pyproject.toml
backend/src/: llm_service.py  main.py
backend/tests/: test_llm_service.py  test_main.py
frontend/: .dockerignore  .prettierrc.json  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/Interfaces/: types.ts
frontend/src/api/: TranslateApi.ts
frontend/src/components/: Footer.tsx  NavBar.tsx
frontend/src/pages/: AboutPage.tsx  ExamplesPage.tsx  TranslatePage.tsx
frontend/src/services/: TranslateService.ts
src/: App.tsx  main.tsx
src/pages/: TranslatePage.tsx
